--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta name="keywords" content="mole catcher Wales, pest control Wales, mole removal, mole trapping Wales, farm pest control, garden moles, mole man, mole trapping services, mole catcher for farms" />
   <link rel="canonical" href="https://www.welshmolecatcher.co.uk/" />
   <title>Welsh Mole Catcher | Expert Mole Control Services Across Wales</title>
-  <link rel="stylesheet" href="styles/desktop.css" />
-  <link rel="stylesheet" href="styles/mobile.css" media="only screen and (max-width: 900px)" />
+  <link rel="stylesheet" href="desktop.css" />
+  <link rel="stylesheet" href="mobile.css" media="only screen and (max-width: 900px)" />
 </head>
 <body>
   <header>
