--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <header>
     <div class="logo-container">
-      <img src="images/logo.png" alt="Welsh Mole Catcher Logo" class="logo" />
+      <img src="logo.png" alt="Welsh Mole Catcher Logo" class="logo" />
       <div class="company-name">Welsh Mole Catcher</div>
       <h1>Expert Mole Catching Services Across Wales</h1>
     </div>
@@ -45,7 +45,7 @@
         <li><strong>Trapping Only</strong> – No poisons or gas used.</li>
         <li><strong>Eco-Friendly Approach</strong> – Safe for pets, livestock, and the environment.</li>
       </ul>
-      <img src="images/moleintrap.jpg" alt="Mole caught in a trap" class="center-image" />
+      <img src="moleintrap.jpg" alt="Mole caught in a trap" class="center-image" />
     </section>
 
     <section>
