--- a/index.html
+++ b/index.html
@@ -3,24 +3,25 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Expert mole catching services across Wales. Local pest control for farms, gardens, and homes. Fast, humane mole trapping solutions." />
-  <meta name="keywords" content="mole catcher Wales, pest control Wales, mole removal, mole trapping Wales, farm pest control, garden moles, mole man, mole trapping services, mole catcher for farms" />
+  <meta name="description" content="Professional mole catcher for farms, gardens, and homes across Wales. Humane, fast, and eco-friendly mole control." />
+  <meta name="keywords" content="mole catcher Wales, mole control, farm mole trapping, garden mole removal, pest control Wales, Welsh mole catcher" />
   <link rel="canonical" href="https://www.welshmolecatcher.co.uk/" />
-  <title>Welsh Mole Catcher | Expert Mole Control Services Across Wales</title>
+  <title>Welsh Mole Catcher | Humane Mole Control for Farms & Gardens</title>
   <link rel="stylesheet" href="desktop.css" />
   <link rel="stylesheet" href="mobile.css" media="only screen and (max-width: 900px)" />
 </head>
 <body>
+
   <header>
     <div class="logo-container">
-      <img src="logo.png" alt="Welsh Mole Catcher Logo" class="logo" />
+      <img src="logo.png" alt="Welsh Mole Catcher logo" class="logo" />
       <div class="company-name">Welsh Mole Catcher</div>
-      <h1>Expert Mole Catching Services Across Wales</h1>
+      <h1>Humane Mole Catching Services Across Wales</h1>
     </div>
     <div class="contact-info">
-      <div class="phone-number"><a href="tel:07375303124">07375 303124</a></div>
-      <div class="email-toggle" onclick="toggleEmail()">Email Me</div>
-      <a class="email-address" id="email-address" href="#" onclick="sendEmail()">Email Me</a>
+      <a href="tel:07375303124" class="phone-number">📞 07375 303124</a>
+      <div class="email-toggle" onclick="toggleEmail()">📧 Email Me</div>
+      <a id="email-address" class="email-address" href="#" onclick="sendEmail()">info@welshmolecatcher.co.uk</a>
     </div>
   </header>
 
@@ -30,36 +31,41 @@
       <li><a href="/mole-catching">Mole Catching</a></li>
       <li><a href="/rodent-control">Rodent Control</a></li>
       <li><a href="/wasp-nest-removal">Wasp Nest Removal</a></li>
-      <li><a href="/pest-management">Pest Management</a></li>
       <li><a href="/contact">Contact</a></li>
     </ul>
   </nav>
 
   <main>
     <section>
-      <h2>Your Local Mole Catcher Across Wales</h2>
-      <p>Whether you're on a farm, in a rural village, or in a town, if moles are causing damage to your land, I can help. I'm a professional mole catcher covering all of Wales – offering fast, affordable, and humane <strong>mole control</strong>.</p>
+      <h2>Your Local Mole Catcher in Wales</h2>
+      <p>I provide fast, effective mole control across farms, gardens, and homes in Wales. Using safe and humane trapping methods — no poisons or gas — I help protect your land from costly mole damage.</p>
       <ul>
-        <li><strong>Farm Mole Control</strong> – Retainer options available.</li>
-        <li><strong>Garden Mole Catching</strong> – Stop lawn damage fast.</li>
-        <li><strong>Trapping Only</strong> – No poisons or gas used.</li>
-        <li><strong>Eco-Friendly Approach</strong> – Safe for pets, livestock, and the environment.</li>
+        <li><strong>Farm Mole Control</strong> – Retainer plans available.</li>
+        <li><strong>Garden Mole Removal</strong> – Restore your lawn quickly.</li>
+        <li><strong>Pet & Eco Friendly</strong> – Safe for animals and the environment.</li>
+        <li><strong>Trapping Only</strong> – Fully traditional methods.</li>
       </ul>
-      <img src="moleintrap.jpg" alt="Mole caught in a trap" class="center-image" />
+      <img src="moleintrap.jpg" alt="Mole caught humanely in a trap" class="center-image" />
     </section>
 
     <section>
-      <h3>Why Choose Me?</h3>
-      <p>Local, friendly, and fast – I pride myself on offering proper service without the fluff. You'll deal directly with me, and I’ll get the job done properly the first time. No call centres, no nonsense.</p>
+      <h3>Why Choose Welsh Mole Catcher?</h3>
+      <p>No call centres, no middlemen – just a proper service from someone who knows the land. I’m local, friendly, and I do the job right first time.</p>
+      <ul>
+        <li>Over 10 years' experience in rural pest control</li>
+        <li>Quick call-out across South & Mid Wales</li>
+        <li>Affordable rates – with or without retainers</li>
+      </ul>
     </section>
 
     <section>
       <h3>How to Book</h3>
-      <p>Just ring me on <strong><a href="tel:07375303124">07375 303124</a></strong> or <a class="email-address" href="#" onclick="sendEmail()">email me</a>. I’ll ask where the issue is, what the land is like, and arrange a time to visit.</p>
+      <p>Just give me a ring on <a href="tel:07375303124"><strong>07375 303124</strong></a> or <a href="#" onclick="sendEmail()">email me</a>. I’ll ask what the problem is, where it is, and arrange a time to sort it. Simple as that.</p>
     </section>
 
     <section>
-      <h3>Other Areas Covered</h3>
+      <h3>Areas Covered</h3>
+      <p>Based in Banwen, I cover all of Wales. Popular locations I visit include:</p>
       <ul>
         <li><a href="https://talgarth.welshtownandcountry.co.uk">Talgarth Mole Catcher</a></li>
         <li><a href="https://brecon.welshtownandcountry.co.uk">Brecon Mole Catcher</a></li>
@@ -69,18 +75,20 @@
   </main>
 
   <footer class="footer">
-    <p>&copy; 2025 Welsh Mole Catcher</p>
+    <p>&copy; 2025 Welsh Mole Catcher. All rights reserved.</p>
     <p><a href="/privacy-policy">Privacy Policy</a> | <a href="/terms-conditions">Terms & Conditions</a></p>
   </footer>
 
   <script>
     function toggleEmail() {
       const emailElement = document.getElementById("email-address");
-      emailElement.style.display = (emailElement.style.display === "block") ? "none" : "block";
+      emailElement.style.display = emailElement.style.display === "block" ? "none" : "block";
     }
+
     function sendEmail() {
       window.location.href = "mailto:info@welshmolecatcher.co.uk";
     }
   </script>
+
 </body>
 </html>
