--- a/index.html
+++ b/index.html
@@ -67,9 +67,7 @@
       <h3>Areas Covered</h3>
       <p>Based in Banwen, I cover all of Wales. Popular locations I visit include:</p>
       <ul>
-        <li><a href="https://talgarth.welshtownandcountry.co.uk">Talgarth Mole Catcher</a></li>
-        <li><a href="https://brecon.welshtownandcountry.co.uk">Brecon Mole Catcher</a></li>
-        <li><a href="https://neath.welshtownandcountry.co.uk">Neath Mole Catcher</a></li>
+        <li><a href="https://www.welshtownandcountry.co.uk">Main Siter</a></li>
       </ul>
     </section>
   </main>
