--- a/index.html
+++ b/index.html
@@ -64,6 +64,26 @@
     </section>
 
     <section>
+  <h3>Mole Catching in Action</h3>
+  <div class="photo-gallery">
+    <figure>
+      <img src="moles_collage.jpg" alt="Multiple mole catches on different farms in Wales" title="Successful mole catches across Welsh farms" loading="lazy" />
+      <figcaption>Mole Catch Highlights</figcaption>
+    </figure>
+
+    <figure>
+      <img src="farm_moles.jpg" alt="Dead moles lined up on a Welsh farm after pest control visit" title="Traditional mole trapping results on a Welsh farm" loading="lazy" />
+      <figcaption>Farm Mole Trapping Results</figcaption>
+    </figure>
+
+    <figure>
+      <img src="farm_son.jpg" alt="Father and son working together on mole control on a farm" title="Family-run mole control team at work" loading="lazy" />
+      <figcaption>Family Run, Local Service</figcaption>
+    </figure>
+  </div>
+</section>
+
+    <section>
       <h3>Areas Covered</h3>
       <p>Based in Banwen, I cover all of Wales. Popular locations I visit include:</p>
       <ul>
