--- a/index.html
+++ b/index.html
@@ -1,112 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Professional mole catcher for farms, gardens, and homes across Wales. Humane, fast, and eco-friendly mole control." />
-  <meta name="keywords" content="mole catcher Wales, mole control, farm mole trapping, garden mole removal, pest control Wales, Welsh mole catcher" />
-  <link rel="canonical" href="https://www.welshmolecatcher.co.uk/" />
-  <title>Welsh Mole Catcher | Humane Mole Control for Farms & Gardens</title>
-  <link rel="stylesheet" href="desktop.css" />
-  <link rel="stylesheet" href="mobile.css" media="only screen and (max-width: 900px)" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Welsh Town and Country offers expert mole catching services for farms, gardens, and homes across Wales. Trusted, family-run, and environmentally friendly pest control solutions.">
+  <meta name="keywords" content="mole catching, pest control, farm pest control, Welsh mole catcher, traditional mole trapping, eco-friendly pest control, rodent control, wildlife management, farm pest solutions, Welsh pest control">
+  <meta name="author" content="David Hill, Welsh Town and Country">
+  <meta property="og:title" content="Mole Catching in Wales - Welsh Town and Country">
+  <meta property="og:description" content="Expert mole control for farms and gardens in Wales. Environmentally friendly, traditional methods of mole catching.">
+  <meta property="og:image" content="farm_john_mole.jpg">
+  <meta property="og:url" content="https://www.welshmolecatcher.co.uk">
+  <meta property="og:type" content="website">
+  <title>Welsh Town and Country - Expert Mole Catching in Wales</title>
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="mobile.css" media="(max-width: 768px)">
+  <link rel="stylesheet" href="desktop.css" media="(min-width: 769px)">
 </head>
 <body>
-
   <header>
-    <div class="logo-container">
-      <img src="logo.png" alt="Welsh Mole Catcher logo" class="logo" />
-      <div class="company-name">Welsh Mole Catcher</div>
-      <h1>Humane Mole Catching Services Across Wales</h1>
-    </div>
-    <div class="contact-info">
-      <a href="tel:07375303124" class="phone-number">📞 07375 303124</a>
-      <div class="email-toggle" onclick="toggleEmail()">📧 Email Me</div>
-      <a id="email-address" class="email-address" href="#" onclick="sendEmail()">info@welshmolecatcher.co.uk</a>
-    </div>
+    <nav>
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About Us</a></li>
+        <li><a href="#services">Our Services</a></li>
+        <li><a href="#gallery">Gallery</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
   </header>
 
-  <nav class="nav">
-    <ul>
-      <li><a href="/">Home</a></li>
-      <li><a href="/mole-catching">Mole Catching</a></li>
-      <li><a href="/rodent-control">Rodent Control</a></li>
-      <li><a href="/wasp-nest-removal">Wasp Nest Removal</a></li>
-      <li><a href="/contact">Contact</a></li>
-    </ul>
-  </nav>
-
   <main>
-    <section>
-      <h2>Your Local Mole Catcher in Wales</h2>
-      <p>I provide fast, effective mole control across farms, gardens, and homes in Wales. Using safe and humane trapping methods — no poisons or gas — I help protect your land from costly mole damage.</p>
-      <ul>
-        <li><strong>Farm Mole Control</strong> – Retainer plans available.</li>
-        <li><strong>Garden Mole Removal</strong> – Restore your lawn quickly.</li>
-        <li><strong>Pet & Eco Friendly</strong> – Safe for animals and the environment.</li>
-        <li><strong>Trapping Only</strong> – Fully traditional methods.</li>
-      </ul>
-      <img src="moleintrap.jpg" alt="Mole caught humanely in a trap" class="center-image" />
+    <section id="home">
+      <h1>Welcome to Welsh Town and Country - Mole Catching Experts</h1>
+      <p>Your trusted partner for mole control on farms, gardens, and homes across Wales. We offer traditional and eco-friendly methods for safe, effective pest management.</p>
     </section>
 
-    <section>
-      <h3>Why Choose Welsh Mole Catcher?</h3>
-      <p>No call centres, no middlemen – just a proper service from someone who knows the land. I’m local, friendly, and I do the job right first time.</p>
-      <ul>
-        <li>Over 10 years' experience in rural pest control</li>
-        <li>Quick call-out across South & Mid Wales</li>
-        <li>Affordable rates – with or without retainers</li>
-      </ul>
+    <section id="about">
+      <h2>About Us</h2>
+      <p>We are a family-run business with decades of experience in mole catching and pest control. Our expert team uses time-honored techniques to keep your property mole-free, sustainably and efficiently.</p>
     </section>
 
-    <section>
-      <h3>How to Book</h3>
-      <p>Just give me a ring on <a href="tel:07375303124"><strong>07375 303124</strong></a> or <a href="#" onclick="sendEmail()">email me</a>. I’ll ask what the problem is, where it is, and arrange a time to sort it. Simple as that.</p>
+    <section id="services">
+      <h2>Our Services</h2>
+      <h3>Mole Control</h3>
+      <p>We offer tailored solutions for mole control on farms, gardens, and homes. Our services include trapping, removal, and preventative measures to keep mole populations in check.</p>
+
+      <h3>Rodent Control</h3>
+      <p>Effective rodent control for farms and homes, using safe and environmentally friendly methods to ensure your property is free from rats and mice.</p>
     </section>
 
-    <section>
-  <h3>Mole Catching in Action</h3>
-  <div class="photo-gallery">
-    <figure>
-      <img src="moles_collage.jpg" alt="Multiple mole catches on different farms in Wales" title="Successful mole catches across Welsh farms" loading="lazy" />
-      <figcaption>Mole Catch Highlights</figcaption>
-    </figure>
+    <section id="gallery">
+      <h2>Gallery - Mole Catching in Action</h2>
+      <div class="photo-gallery">
+        <figure>
+          <img src="farm_john_mole.jpg" alt="John holding freshly trapped moles on a Welsh farm" title="John's traditional mole catching on the farm" loading="lazy" />
+          <figcaption>John’s Mole Catch – Generations of Farm Expertise</figcaption>
+        </figure>
 
-    <figure>
-      <img src="farm_moles.jpg" alt="Dead moles lined up on a Welsh farm after pest control visit" title="Traditional mole trapping results on a Welsh farm" loading="lazy" />
-      <figcaption>Farm Mole Trapping Results</figcaption>
-    </figure>
+        <figure>
+          <img src="farm_moles.jpg" alt="Dead moles lined up on a Welsh farm after pest control visit" title="Traditional mole trapping results on a Welsh farm" loading="lazy" />
+          <figcaption>Farm Mole Trapping Results</figcaption>
+        </figure>
 
-    <figure>
-      <img src="farm_son.jpg" alt="Father and son working together on mole control on a farm" title="Family-run mole control team at work" loading="lazy" />
-      <figcaption>Family Run, Local Service</figcaption>
-    </figure>
-  </div>
-</section>
+        <figure>
+          <img src="moles_collage.jpg" alt="Multiple mole catches on different farms in Wales" title="Successful mole catches across Welsh farms" loading="lazy" />
+          <figcaption>Mole Catch Highlights</figcaption>
+        </figure>
+      </div>
+    </section>
 
-    <section>
-      <h3>Areas Covered</h3>
-      <p>Based in Banwen, I cover all of Wales. Popular locations I visit include:</p>
-      <ul>
-        <li><a href="https://www.welshtownandcountry.co.uk">Main Siter</a></li>
-      </ul>
+    <section id="contact">
+      <h2>Contact Us</h2>
+      <p>If you need professional mole catching services, don’t hesitate to reach out! Contact us via phone or email, or fill out the form below.</p>
+      <form action="submit_form.php" method="POST">
+        <label for="name">Name</label>
+        <input type="text" id="name" name="name" required>
+
+        <label for="email">Email</label>
+        <input type="email" id="email" name="email" required>
+
+        <label for="message">Message</label>
+        <textarea id="message" name="message" required></textarea>
+
+        <button type="submit">Submit</button>
+      </form>
     </section>
   </main>
 
-  <footer class="footer">
-    <p>&copy; 2025 Welsh Mole Catcher. All rights reserved.</p>
-    <p><a href="/privacy-policy">Privacy Policy</a> | <a href="/terms-conditions">Terms & Conditions</a></p>
+  <footer>
+    <p>&copy; 2025 Welsh Town and Country - All Rights Reserved</p>
   </footer>
-
-  <script>
-    function toggleEmail() {
-      const emailElement = document.getElementById("email-address");
-      emailElement.style.display = emailElement.style.display === "block" ? "none" : "block";
-    }
-
-    function sendEmail() {
-      window.location.href = "mailto:info@welshmolecatcher.co.uk";
-    }
-  </script>
-
 </body>
 </html>
