--- a/index.html
+++ b/index.html
@@ -33,11 +33,13 @@
     <section id="home">
       <h1>Welcome to Welsh Town and Country - Mole Catching Experts</h1>
       <p>Your trusted partner for mole control on farms, gardens, and homes across Wales. We offer traditional and eco-friendly methods for safe, effective pest management.</p>
+      <img src="IMG-20240515-WA0027.jpg" alt="Mole catching in action" title="Mole catching in action on a Welsh farm" loading="lazy">
     </section>
 
     <section id="about">
       <h2>About Us</h2>
       <p>We are a family-run business with decades of experience in mole catching and pest control. Our expert team uses time-honored techniques to keep your property mole-free, sustainably and efficiently.</p>
+      <img src="farm_son.jpg" alt="Father and son working together on mole control on a farm" title="Family-run pest control business in action" loading="lazy">
     </section>
 
     <section id="services">
@@ -47,6 +49,7 @@
 
       <h3>Rodent Control</h3>
       <p>Effective rodent control for farms and homes, using safe and environmentally friendly methods to ensure your property is free from rats and mice.</p>
+      <img src="rat-Pest.jpg" alt="Rat control on a farm" title="Rat control services for farms" loading="lazy">
     </section>
 
     <section id="gallery">
@@ -58,13 +61,13 @@
         </figure>
 
         <figure>
-          <img src="farm_moles.jpg" alt="Dead moles lined up on a Welsh farm after pest control visit" title="Traditional mole trapping results on a Welsh farm" loading="lazy" />
-          <figcaption>Farm Mole Trapping Results</figcaption>
+          <img src="moles_collage.jpg" alt="Multiple mole catches on different farms in Wales" title="Successful mole catches across Welsh farms" loading="lazy" />
+          <figcaption>Mole Catch Highlights</figcaption>
         </figure>
 
         <figure>
-          <img src="moles_collage.jpg" alt="Multiple mole catches on different farms in Wales" title="Successful mole catches across Welsh farms" loading="lazy" />
-          <figcaption>Mole Catch Highlights</figcaption>
+          <img src="farm_moles.jpg" alt="Dead moles lined up on a Welsh farm after pest control visit" title="Traditional mole trapping results on a Welsh farm" loading="lazy" />
+          <figcaption>Farm Mole Trapping Results</figcaption>
         </figure>
       </div>
     </section>
@@ -89,6 +92,11 @@
 
   <footer>
     <p>&copy; 2025 Welsh Town and Country - All Rights Reserved</p>
+    <div>
+      <a href="https://www.instagram.com" target="_blank"><img src="Instagram_icon.png" alt="Instagram logo"></a>
+      <a href="https://www.linkedin.com" target="_blank"><img src="linked-in.jpg" alt="LinkedIn logo"></a>
+      <a href="https://www.facebook.com" target="_blank"><img src="facebook_logo.png" alt="Facebook logo"></a>
+    </div>
   </footer>
 </body>
 </html>
