--- a/index.html
+++ b/index.html
@@ -3,90 +3,68 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Expert mole and rat control services for farms, houses, and gardens across South Wales. Environmentally friendly, professional pest solutions.">
-  <meta name="keywords" content="mole control South Wales, farm pest control, rat removal, pest services Brecon, molecatcher Swansea, pest control Neath, rodent control Ammanford, environmentally friendly pest control, Welsh molecatcher">
-  <meta name="author" content="Welsh Town and Country">
-  <title>Welsh Mole Catcher - Farm & House Pest Control in South Wales</title>
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <meta name="description" content="Traditional mole catching and rural pest control services in Wales. Reliable, local, and environmentally-friendly solutions for farms and countryside properties.">
+  <meta name="keywords" content="mole catcher Wales, farm pest control, Welsh pest control, traditional mole trapping, rural pest solutions, wasp removal, rat control, squirrel pest control">
+  <meta name="author" content="Welsh Mole Catcher">
+  <title>Welsh Mole Catcher | Traditional Mole Trapping & Rural Pest Control</title>
+  <link rel="icon" href="favicon.ico">
   <link rel="apple-touch-icon" href="apple_touch_icon.png">
   <link rel="stylesheet" href="mobile.css" media="only screen and (max-width: 768px)">
   <link rel="stylesheet" href="desktop.css" media="only screen and (min-width: 769px)">
 </head>
 <body>
   <header class="site-header">
-    <img src="logo.png" alt="Welsh Town and Country Logo" class="site-logo">
-    <nav>
-      <ul class="nav-list">
-        <li><a href="#services" class="nav-link">Services</a></li>
-        <li><a href="#gallery" class="nav-link">Gallery</a></li>
-        <li><a href="#contact" class="nav-link">Contact</a></li>
-      </ul>
-    </nav>
+    <img src="logo.png" alt="Welsh Mole Catcher logo" class="logo">
+    <h1>Welsh Mole Catcher</h1>
+    <p>Traditional Trapping. Trusted Results.</p>
   </header>
 
-  <section class="hero-section">
-    <h1 class="hero-title">Professional Mole & Rat Control</h1>
-    <p class="hero-description">Serving farms, homes & gardens across South Wales</p>
-    <a href="#contact" class="cta-button">Book Now</a>
+  <section class="intro-text">
+    <h2>Traditional Mole Catching Specialist</h2>
+    <p>
+      At Welsh Mole Catcher, I specialize in professional mole control using traditional trapping methods. Based in the heart of the countryside, I focus on protecting farms, paddocks, and rural homes from mole damage—no poisons, no gimmicks, just results you can trust.
+    </p>
   </section>
 
-  <section class="services" id="services">
-    <h2 class="section-title">Our Services</h2>
-    <div class="service-grid">
-      <div class="service-item">
-        <img src="farm_moles.jpg" alt="Mole Control" class="service-image">
-        <p>Mole Control</p>
-      </div>
-      <div class="service-item">
-        <img src="rat-Pest.jpg" alt="Rat Control" class="service-image">
-        <p>Rat Control</p>
-      </div>
-      <div class="service-item">
-        <img src="waspnest.jpg" alt="Wasp Nest Removal" class="service-image">
-        <p>Wasp Nest Removal</p>
-      </div>
-    </div>
+  <section class="services-text">
+    <h2>Rural Pest Control Services</h2>
+    <p>
+      While mole catching is my main expertise, I also offer pest control for rats, mice, wasps, and squirrels—particularly where rural life meets the wild. Whether you’re dealing with pests in a barn, garden, or outbuilding, I provide a reliable, local service.
+    </p>
   </section>
 
-  <section class="gallery-container" id="gallery">
-    <h2 class="section-title">Gallery</h2>
-    <div class="gallery-item">
-      <img src="farm_john_mole.jpg" alt="John with Mole Traps" class="gallery-image">
-      <p class="gallery-caption">John preparing mole traps on a Brecon farm</p>
-    </div>
-    <div class="gallery-item">
-      <img src="squrrielshed.jpg" alt="Squirrel in Shed" class="gallery-image">
-      <p class="gallery-caption">Squirrel infestation solved safely</p>
-    </div>
-    <div class="gallery-item">
-      <img src="rattrap3.jpg" alt="Humane Rat Trap" class="gallery-image">
-      <p class="gallery-caption">Effective rodent control</p>
-    </div>
+  <section class="mole-focus">
+    <h2>Focused on Farms and the Countryside</h2>
+    <p>
+      My services are tailored for farmers and landowners who need fast, effective solutions. Trapping is a safe, environmentally friendly way to manage mole populations and protect your fields.
+    </p>
   </section>
 
-  <section class="contact" id="contact">
-    <h2 class="section-title">Get in Touch</h2>
-    <form class="contact-form">
-      <input type="text" class="input-field" placeholder="Your Name" required>
-      <input type="text" class="input-field" placeholder="Postcode" required>
-      <input type="tel" class="input-field" placeholder="Phone Number" required>
-      <textarea class="input-field" placeholder="Describe your pest problem..." required></textarea>
-      <button class="cta-button" type="submit">Send</button>
-    </form>
+  <section class="photo-gallery">
+    <h3>Mole Catching in Action</h3>
+    <div class="gallery-grid">
+      <figure>
+        <img src="moles_collage.jpg" alt="Multiple mole catches on different farms in Wales" title="Successful mole catches across Welsh farms" loading="lazy">
+        <figcaption>Mole Catch Highlights</figcaption>
+      </figure>
+      <figure>
+        <img src="farm_moles.jpg" alt="Dead moles lined up on a Welsh farm after pest control visit" title="Traditional mole trapping results on a Welsh farm" loading="lazy">
+        <figcaption>Farm Mole Trapping Results</figcaption>
+      </figure>
+      <figure>
+        <img src="farm_son.jpg" alt="Father and son working together on mole control on a farm" title="Family-run mole control team at work" loading="lazy">
+        <figcaption>Family Run, Local Service</figcaption>
+      </figure>
+      <figure>
+        <img src="farm_john_mole.jpg" alt="Experienced mole catcher with a successful catch" title="John hard at work in the Welsh hills" loading="lazy">
+        <figcaption>Years of Experience</figcaption>
+      </figure>
+    </div>
   </section>
 
   <footer class="site-footer">
-    <ul class="footer-nav-list">
-      <li><a href="#services" class="footer-nav-link">Services</a></li>
-      <li><a href="#gallery" class="footer-nav-link">Gallery</a></li>
-      <li><a href="#contact" class="footer-nav-link">Contact</a></li>
-    </ul>
-    <div class="footer-social">
-      <a href="#" class="social-icon"><img src="facebook_logo.png" alt="Facebook"></a>
-      <a href="#" class="social-icon"><img src="tube-icon.jpg" alt="YouTube"></a>
-      <a href="#" class="social-icon"><img src="Instagram_icon.png" alt="Instagram"></a>
-    </div>
-    <p>&copy; 2025 Welsh Town and Country - All rights reserved.</p>
+    <p>&copy; 2025 Welsh Mole Catcher. All rights reserved.</p>
+    <p><a href="https://www.welshtownandcountry.co.uk">Visit main site</a></p>
   </footer>
 </body>
 </html>
